syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "habits.com/habit/pb";

message User {
    string user_id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    google.protobuf.Timestamp password_changed_at = 5;
    google.protobuf.Timestamp created_at = 6;
}